--- a/css/akva.css
+++ b/css/akva.css
@@ -51,11 +51,30 @@ Pointers:
 	margin: 0;
 	padding: 0;
 }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
 
 /* content tests */
 body {
   font-size: 16px;
   font-family: serif;
+  color: #333;
+  padding-bottom: 88px;
 }
 
 p {
@@ -116,14 +135,27 @@ label {
 	overflow: hidden;
 }
 .testcol {
-	width: 47.5%;
+	width: 48%;
 	float: left;
-	padding: 0 1.3% 0 9.5%;
+	padding: 0 1.3% 0 9.2%;
 }
 .testcol2 {
 	float: right;
-	width: 30.7%;
-	padding: 0 1.5% 0 0;
+	width: 23%;
+	padding: 0 9.5% 0 0;
+}
+.testcol p,
+.testcol2 p {
+	line-height: 22px;
+}
+.testcol p {
+	font-size: 16px;
+}
+.testcol2 p {
+	font-size: 14px;
+}
+.testcol p:first-of-type {
+	font-size: 18px;
 }
 header {
 	padding: 0 11% 22px;
@@ -153,7 +185,7 @@ p img {
 }
 
 blockquote p {
-	margin: 0 18%;
+	margin: 0 18% 44px;
 }
 
 p cite {
@@ -276,7 +308,6 @@ img,embed {
 	/* Flexible box model */
 	-webkit-box-flex: 1;
 	-moz-box-flex: 1;
-	margin: 0 1%;
 }
 
 .akva-cols li div {
