--- a/css/akva.css
+++ b/css/akva.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 
 /*
 
@@ -47,173 +48,18 @@ Pointers:
 
 */
 
-* {
-	margin: 0;
-	padding: 0;
-}
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-style: inherit;
-	font-size: 100%;
-	font-family: inherit;
-	vertical-align: baseline;
-}
-
-/* content tests */
-body {
-  font-size: 16px;
-  font-family: serif;
-  color: #333;
-  padding-bottom: 88px;
-}
-
-p {
-  font-size: 1em; /* 16px */
-  line-height: 1.375em; /* 22px */
-  margin: 0 0 1.375em 0;
-}
-/* 24px - The quick brown fox jumps over the lazy dog */
-h1, .h1 {
-  font-size: 1.5em; /* 24px */
-  line-height: 1.8333em; /* 44px */
-  margin-top: 0.9167em;
-  margin-bottom: 0em;
-}
-/* 22px - The quick brown fox jumps over the lazy dog */
-h2 {
-  font-size: 1.375em; /* 22px */
-  line-height: 1em; /* 22px */
-  margin-top: 1em;
-  margin-bottom: 0em;
-}
-/* 20px - The quick brown fox jumps over the lazy dog */
-.class-for-20px {
-  font-size: 1.25em; /* 20px */
-  line-height: 1.1em; /* 22px */
-  margin-top: 1.1em;
-  margin-bottom: 0em;
-}
-/* 18px - The quick brown fox jumps over the lazy dog */
-.class-for-18px {
-  font-size: 1.125em; /* 18px */
-  line-height: 1.2222em; /* 22px */
-  margin-top: 1.2222em;
-  margin-bottom: 0em;
-}
-/* 16px - The quick brown fox jumps over the lazy dog */
-.class-for-16px {
-  font-size: 1em; /* 16px */
-  line-height: 1.375em; /* 22px */
-  margin-top: 1.375em;
-  margin-bottom: 0em;
-}
-/* 14px - The quick brown fox jumps over the lazy dog */
-.class-for-14px {
-  font-size: 0.875em; /* 14px */
-  line-height: 1.5714em; /* 22px */
-  margin-top: 1.5714em;
-  margin-bottom: 0em;
-}
-label {
-	display: block;
-	font-size: .75em;
-}
-
-.testcol-parent {
-	width: 80%;
-	margin: 0 auto;
-	overflow: hidden;
-}
-.testcol {
-	width: 48%;
-	float: left;
-	padding: 0 1.3% 0 9.2%;
-}
-.testcol2 {
-	float: right;
-	width: 23%;
-	padding: 0 9.5% 0 0;
-}
-.testcol p,
-.testcol2 p {
-	line-height: 22px;
-}
-.testcol p {
-	font-size: 16px;
-}
-.testcol2 p {
-	font-size: 14px;
-}
-.testcol p:first-of-type {
-	font-size: 18px;
-}
-header {
-	padding: 0 11% 22px;
-	margin-bottom: 22px;
-}
-header h1 {
-	margin: 0;
-	line-height: 1em;
-	padding-top: 44px;
-	font-size: 88px;
-	color: rgba(0,200,255,.4);
-	text-align: center;
-	text-shadow: 10px 5px 0 rgba(200,200,200,.3);
-}
-header p {
-	margin: 0;
-}
-blockquote {
-	text-align: center;
-	font-style: italic;
-}
-
-p img {
-	float: left;
-	max-width: 46%;
-	margin: 0 10% 0 0;
-}
-
-blockquote p {
-	margin: 0 18% 44px;
-}
-
-p cite {
-	display: inline-block;
-	width: 100%;
-	text-align: right;
-	color: #666;
-}
-
-@media screen and (max-width: 800px) {
-  
-	p img {
-		float: none;
-		max-width: 100%;
-		margin: 0;
-	}
-}
-
 
 
 /*
  * Akva Style
 ----------------------------*/
 
+
 /* general */
 #akva-grid {
 	position: absolute;
-	width: 80%;
+	width: 92%;
+	max-width: 1020px;
 	left: 0;
 	right: 0;
 	top: 0;
@@ -272,11 +118,16 @@ p cite {
 #akva-panel {
 	position: absolute;
 	top: 0;
+	left: 0;
 	padding: 5px;
 }
 
 img,embed {
 	max-width: 100%;
+}
+label {
+	display: block;
+	font-size: .75em;
 }
 
 /*
@@ -292,10 +143,13 @@ img,embed {
 	/* Flexible box model */
 	display: -webkit-box;
 	display: -moz-box;
+	display: box;
 	-webkit-box-align: stretch;
 	-webkit-box-orient: horizontal;
 	-moz-box-align: stretch;
 	-moz-box-orient: horizontal;
+	box-align: stretch;
+	box-orient: horizontal;
 }
 
 .akva-cols li { 
@@ -308,74 +162,17 @@ img,embed {
 	/* Flexible box model */
 	-webkit-box-flex: 1;
 	-moz-box-flex: 1;
+	box-flex: 1;
+	
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	-ms-box-sizing:border-box;
+	box-sizing:border-box;
 }
 
 .akva-cols li div {
 	margin: 0;
 }
-
-/* 
-li:first-of-type:nth-last-of-type(1) {
-	width: 100%;
-}
-
-li:first-of-type:nth-last-of-type(2),
-li:first-of-type:nth-last-of-type(2) ~ li {
-	width: 50%;
-}
-
-li:first-of-type:nth-last-of-type(3),
-li:first-of-type:nth-last-of-type(3) ~ li {
-	width: 33.3333%;
-}
-
-li:first-of-type:nth-last-of-type(4),
-li:first-of-type:nth-last-of-type(4) ~ li {
-	width: 25%;
-}
-
-li:first-of-type:nth-last-of-type(5),
-li:first-of-type:nth-last-of-type(5) ~ li {
-	width: 20%;
-}
-
-li:first-of-type:nth-last-of-type(6),
-li:first-of-type:nth-last-of-type(6) ~ li {
-	width: 16.6666%;
-}
-
-li:first-of-type:nth-last-of-type(7),
-li:first-of-type:nth-last-of-type(7) ~ li {
-	width: 14.2857%;
-}
-
-li:first-of-type:nth-last-of-type(8),
-li:first-of-type:nth-last-of-type(8) ~ li {
-	width: 12.5%;
-}
-
-li:first-of-type:nth-last-of-type(9),
-li:first-of-type:nth-last-of-type(9) ~ li {
-	width: 11.1111%;
-}
-
-li:first-of-type:nth-last-of-type(10),
-li:first-of-type:nth-last-of-type(10) ~ li {
-	width: 10%;
-}
-
-li:first-of-type:nth-last-of-type(11),
-li:first-of-type:nth-last-of-type(11) ~ li {
-	width: 9.0909%;
-}
-
-li:first-of-type:nth-last-of-type(12),
-li:first-of-type:nth-last-of-type(12) ~ li {
-	width: 8.3333%;
-}
-*/
-
-
 
 
 
